# just-func-rust

./: .gitignore  Cargo.toml  README.md
rs/just_func/: Cargo.toml  README.md
