[package]
name = "just-func"
description = "just-func in Rust"
version = "0.0.0-alpha"
authors = ["Homa Wong <homawong@gmail.com>"]
license = "MIT"
edition = "2018"
homepage = "https://github.com/justland/just-func-rust"
repository = "https://github.com/justland/just-func-rust"
documentation = "https://github.com/justland/just-func-rust"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
